# audiobookutils

./: .gitignore  README.md  pyproject.toml
audiobookutils/: common.py  engine.py  logging.py  pager.py  preprocessing.py  sequence_alignment.py
audiobookutils/renderers/: __init__.py  renderers_common.py  srt_renderer.py
conf/: match_book_and_audio.yaml  preprocessing.yaml
conf/logging/: console_log.yaml  logging_base.yaml
conf/paging/: paging_base.yaml
