[project]
name = "audiobookutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "hydra-core>=1.3.2",
    "rapidfuzz>=3.14.1",
    "whisperx>=3.7.4",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "widgetsnbextension>=4.0.14",
]
